# apps/web-ui/src/app/services/accounting-api-service/models/ledger-account.ts
@@ -1,0 +1,14 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+
+/**
+ * Double-entry accounting charter of accounts
+ */
+export interface LedgerAccount {
+  description: string;
+  id: string;
+  name: string;
+  parent_id: string;
+  qualified_name?: string;
+}
